# PhotoViewerClassic

./: .gitattributes  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml
app/src/: main.rs  window.rs
app/ui/: main.slint
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/decode/: Cargo.toml
crates/decode/src/: lib.rs
crates/imageset/: Cargo.toml
crates/imageset/src/: lib.rs
crates/viewstate/: Cargo.toml
crates/viewstate/src/: lib.rs
docs/superpowers/plans/: 2026-05-29-pvc-core-viewer-foundation.md  2026-05-29-pvc-interactive-view-chrome.md  2026-05-30-window-sizing-and-tiered-decode.md  2026-05-30-zen-migration-phase1.md
docs/superpowers/specs/: 2026-05-29-photo-viewer-classic-design.md  2026-05-30-window-sizing-and-tiered-decode-design.md  2026-05-30-zen-codec-decode-migration-design.md
scripts/: release.sh
