[workspace]
resolver = "2"
members = ["app", "crates/imageset", "crates/decode"]

[workspace.dependencies]
slint = { version = "1.16", default-features = false, features = [
    "backend-winit",
    "renderer-femtovg",
    "compat-1-2",   # backward-compat shim (1.16: no-op, no extra deps; does NOT re-enable renderer-software)
] }
slint-build = "1.16"
image = { version = "0.25", features = ["gif", "webp"] }
kamadak-exif = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
