[workspace]
resolver = "2"
members = ["app", "crates/imageset", "crates/decode", "crates/viewstate", "crates/config"]

[workspace.dependencies]
slint = { version = "1.16", default-features = false, features = [
    "backend-winit",
    "renderer-femtovg",
    "compat-1-2",   # backward-compat shim (1.16: no-op, no extra deps; does NOT re-enable renderer-software)
] }
slint-build = "1.16"
# decode-only: default-features off drops the AVIF encoder (rav1e), TIFF, rayon, etc.
# Re-list jpeg/png explicitly (they are dropped without default features).
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
kamadak-exif = "0.6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
