[package]
name = "app"
version.workspace = true
edition = "2021"

[[bin]]
name = "photoviewer"
path = "src/main.rs"

[dependencies]
slint = { workspace = true }
# Named directly so the worker can hold `image::RgbaImage` buffers and apply
# view-only quarter-turn rotations (`image::imageops::rotate90/180/270`). Pinned
# decode-only by the workspace (no AVIF/TIFF/rayon).
image = { workspace = true }
decode = { path = "../crates/decode" }
imageset = { path = "../crates/imageset" }
viewstate = { path = "../crates/viewstate" }
config = { path = "../crates/config" }

[build-dependencies]
slint-build = { workspace = true }

[dev-dependencies]
# Headless GUI tests build a real AppWindow under init_no_event_loop(). The keyboard
# `internal` feature is NOT enabled: its include_dir!() points at a fonts directory that
# ships only in the Slint source tree (not the published crate), so it fails to compile.
# Key bindings are therefore covered by invoking the declared callbacks directly.
i-slint-backend-testing = "1.16"
