[package]
name = "app"
version.workspace = true
edition = "2021"

[[bin]]
name = "photoviewer"
path = "src/main.rs"

[dependencies]
slint = { workspace = true }
# Named directly so the worker can hold `image::RgbaImage` buffers and apply
# view-only quarter-turn rotations (`image::imageops::rotate90/180/270`). Pinned
# decode-only by the workspace (no AVIF/TIFF/rayon).
image = { workspace = true }
# Read GL_MAX_TEXTURE_SIZE at renderer setup (via the rendering notifier) so decodes are
# clamped to the GPU limit — femtovg renders an oversize texture as a silent black frame.
# Matches femtovg 0.23.2's `glow ^0.17` so a single glow stays in the tree.
glow = "0.17"
decode = { path = "../crates/decode" }
imageset = { path = "../crates/imageset" }
viewstate = { path = "../crates/viewstate" }
config = { path = "../crates/config" }
# Reach the winit window for monitor size (current_monitor) — only transitive via slint
# today. Pinned lockstep with slint to keep a single winit 0.30.x in the tree.
i-slint-backend-winit = { version = "=1.16.1", default-features = false }

[build-dependencies]
slint-build = { workspace = true }

[dev-dependencies]
# Headless GUI tests build a real AppWindow under init_no_event_loop(). The keyboard
# `internal` feature is NOT enabled: its include_dir!() points at a fonts directory that
# ships only in the Slint source tree (not the published crate), so it fails to compile.
# Key bindings are therefore covered by invoking the declared callbacks directly.
i-slint-backend-testing = "1.16"
